--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>馥靈之鑰 Hour Light｜HOUR 線上抽牌</title>
+<title>馥靈之鑰 Hour Light｜靈性天使線上抽牌</title>
 <link rel="icon" href="favicon.ico">
 <style>
     :root{--milk:#f9f5f0;--cocoa:#6b4f3e;--rose:#cda86e;--rose-dark:#a88257;}
@@ -17,9 +17,13 @@
         display:inline-block;padding:14px 30px;border-radius:18px;
         margin-bottom:18px;box-shadow:0 3px 8px rgba(0,0,0,.25);
     }
-    .tagline{font-size:17px;margin-bottom:30px;color:var(--rose-dark)}
+    .tagline{
+        font-size:17px;margin-bottom:28px;color:var(--cocoa);
+        background:rgba(255,255,255,.83);display:inline-block;
+        padding:6px 18px;border-radius:14px;box-shadow:0 3px 6px rgba(0,0,0,.25);
+    }
     button{
-        background:var(--rose);color:#fff;border:none;padding:15px 30px;
+        background:var(--rose);color:#fff;border:none;padding:14px 28px;
         font-size:20px;margin:8px;border-radius:15px;cursor:pointer;
         box-shadow:0 3px 8px rgba(0,0,0,.25);transition:.3s;
     }
@@ -31,104 +35,87 @@
     .card-number{
         margin-top:10px;font-size:22px;font-weight:bold;
         background:rgba(255,255,255,.75);padding:6px 12px;border-radius:10px}
+    /* 摺疊說明 */
+    details{
+        border:1px solid #e4d6c8;border-radius:12px;margin:8px 0;
+        padding:0 14px;background:rgba(255,255,255,.88);
+        box-shadow:0 2px 6px rgba(0,0,0,.07);
+    }
+    summary{
+        cursor:pointer;list-style:none;font-weight:600;
+        padding:14px 4px;color:var(--rose-dark);
+    }
+    summary::-webkit-details-marker{display:none;}
+    details[open]{background:rgba(255,255,255,.97);}
+    details ul{margin:8px 0 18px 18px;font-size:15px;}
+    /* 區塊外殼 */
     .section{
-        max-width:880px;margin:38px auto;background:rgba(255,255,255,.9);
-        padding:28px;border-radius:16px;box-shadow:0 3px 10px rgba(0,0,0,.15);
+        max-width:880px;margin:36px auto;background:rgba(255,255,255,.9);
+        padding:24px;border-radius:16px;box-shadow:0 3px 10px rgba(0,0,0,.15);
         line-height:1.75;font-size:18px;text-align:left
     }
-    .section h2{color:var(--cocoa);margin-bottom:14px;font-size:1.25rem;text-align:center}
-    .section h3{color:var(--rose-dark);margin:20px 0 8px;font-size:1.05rem}
-    .price-list li{margin-left:4px}
-    .home-button{
+    .section h2{color:var(--cocoa);margin-bottom:12px;font-size:1.25rem;text-align:center}
+    .section h3{color:var(--rose-dark);margin:18px 0 6px;font-size:1.05rem}
+    /* 價格雙欄 */
+    .price-grid{
+        display:grid;grid-template-columns:1fr 1fr;gap:6px 14px;
+        max-width:420px;margin:6px auto;
+    }
+    .price-grid div{
+        background:var(--milk);border-radius:10px;padding:8px 12px;
+        box-shadow:0 2px 4px rgba(0,0,0,.08);
+    }
+    @media(max-width:550px){.price-grid{grid-template-columns:1fr}}
+    /* 返回首頁 */
+    .home-btn{
         display:inline-block;background:var(--rose);color:#fff;padding:12px 28px;
         text-decoration:none;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,.25);
         transition:.3s;margin:34px auto 0;font-size:18px
     }
-    .home-button:hover{background:var(--rose-dark);transform:translateY(-3px)}
+    .home-btn:hover{background:var(--rose-dark);transform:translateY(-3px)}
     @media(max-width:768px){
         button,#copyBtn{width:94%;margin:10px auto;font-size:22px}
         .card-container img{width:94%}
-        .section{padding:22px}
+        .section{padding:20px}
     }
 </style>
 </head>
 <body>
 
-<h1>馥靈之鑰 Hour Light｜HOUR 線上抽牌</h1>
-<p class="tagline">130 張牌卡 × H-O-U-R 四步節奏 — 快速對焦你的節奏訊息</p>
+<h1>馥靈之鑰 Hour Light｜靈性天使線上抽牌</h1>
+<p class="tagline">130 張牌卡 × 130 位靈性天使 — H-O-U-R 四步快速對焦</p>
 
-<!-- 說明區 -->
+<!-- 折疊說明 -->
 <div class="section">
-    <h2>🔮 如何選擇張數？</h2>
-    <p style="text-align:center">先問自己：<em>「我想聚焦哪個層面？」</em></p>
+  <h2>🔮 抽多少？看這裡</h2>
 
-    <!-- 1 張 -->
-    <h3>🃏 1 張｜即時訊息 × 快速對焦</h3>
-    <ul>
-        <li>我此刻的情緒是什麼？</li>
-        <li>今天最需要留意的提示？</li>
-        <li>身體最近想對我說的第一句話？</li>
-        <li>我現在最該補充哪種能量？</li>
-        <li>此刻的核心目標？</li>
-    </ul>
+  <details><summary>1 張｜即時訊息 × 快速對焦</summary>
+    <ul><li>今天最該留意的提示？</li><li>此刻情緒要說什麼？</li></ul>
+  </details>
 
-    <!-- 3 張 -->
-    <h3>🃏 3 張｜過去・現在・未來 能量流</h3>
-    <ul>
-        <li>這件事的源頭、現況和走向？</li>
-        <li>我的工作或創業方向？</li>
-        <li>感情關係的節奏變化？</li>
-        <li>內在信念最近正在轉什麼彎？</li>
-        <li>這次身體不適的源頭？</li>
-    </ul>
+  <details><summary>3 張｜過去・現在・未來 能量流</summary>
+    <ul><li>事件源頭、現況、走向</li><li>感情／職涯節拍</li></ul>
+  </details>
 
-    <!-- 5 張 -->
-    <h3>🃏 5 張｜卡點掃描 × 行動解方</h3>
-    <ul>
-        <li>為什麼我一直卡在金錢／職涯？</li>
-        <li>是否要辭職或換跑道？</li>
-        <li>家庭或人際的循環劇本怎麼破？</li>
-        <li>行動力低落的底層原因？</li>
-        <li>這個選擇能否帶我走出困境？</li>
-    </ul>
+  <details><summary>5 張｜卡點掃描 × 行動解方</summary>
+    <ul><li>金錢 / 關係為何卡住？</li><li>下一步行動與支持資源</li></ul>
+  </details>
 
-    <!-- 7 張 -->
-    <h3>🃏 7 張｜深層架構掃描</h3>
-    <p>三種熱門排法：</p>
-    <ul>
-        <li><strong>七脈輪檢測：</strong>快速檢查哪一輪卡住</li>
-        <li><strong>情緒轉化流程：</strong>起因 → 真需求 → 行動</li>
-        <li><strong>關係動力圖：</strong>我的感受 × 對方感受 × 未來走向</li>
-    </ul>
+  <details><summary>7 張｜深層架構掃描</summary>
+    <ul><li>七脈輪檢測</li><li>情緒轉化流程</li><li>關係動力圖</li></ul>
+  </details>
 
-    <!-- 9 張 -->
-    <h3>🃏 9 張｜宇宙節奏地圖</h3>
-    <ul>
-        <li>宇宙最近給我的功課與禮物</li>
-        <li>下一站人生轉折點</li>
-        <li>與金錢／關係／事業的能量安排</li>
-        <li>我重複吸引的事件源頭</li>
-        <li>最值得顯化的目標</li>
-    </ul>
+  <details><summary>9 張｜宇宙節拍地圖</summary>
+    <ul><li>近期功課與禮物</li><li>下一站轉折</li></ul>
+  </details>
 
-    <!-- 12 張 -->
-    <h3>🃏 12 張｜年度規劃 × 能量重整</h3>
-    <ul>
-        <li>12 個月主題提醒</li>
-        <li>12 個人生面向全盤檢視</li>
-        <li>今年突破舒適圈關鍵月份</li>
-    </ul>
+  <details><summary>12 張｜年度規劃 × 能量重整</summary>
+    <ul><li>12 月主題提醒</li><li>重大轉折月份</li></ul>
+  </details>
 
-    <!-- 15 張 -->
-    <h3>🃏 15 張｜意念藍圖 Ultimate</h3>
-    <ul>
-        <li>意念原型 × 本生核心課題</li>
-        <li>家族印記 × 內在小孩真聲</li>
-        <li>尚未啟動的天賦包</li>
-        <li>現況能場 × 高維祝福 × 行動建議</li>
-    </ul>
-
-    <p style="text-align:center;margin-top:16px;"><strong>🎯 提醒：</strong>抽得多不一定最好；選對題目，才打中紅心。</p>
+  <details><summary>15 張｜意念藍圖 Ultimate</summary>
+    <ul><li>核心課題 × 隱藏天賦</li><li>高維祝福 × 行動清單</li></ul>
+  </details>
 </div>
 
 <!-- 抽牌按鈕 -->
@@ -142,67 +129,52 @@
     <button onclick="drawCards(15)">抽 15 張</button>
 </div>
 
-<!-- 顯示結果 -->
+<!-- 結果與複製 -->
 <div id="result"></div>
 <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
 
-<!-- 付費說明 -->
+<!-- 價格區 -->
 <div class="section">
-    <h2>💰 線上諮詢費用</h2>
-    <p style="text-align:center">複製編號後 → 點擊連結 → 私訊並完成付款</p>
-    <ul class="price-list">
-        <li>1 張 NT$ 300</li>
-        <li>3 張 NT$ 600</li>
-        <li>5 張 NT$ 900</li>
-        <li>7 張 NT$ 1,200</li>
-        <li>9 張 NT$ 1,500</li>
-        <li>12 張 NT$ 1,800</li>
-        <li>15 張 NT$ 2,200</li>
-        <li>個人節奏手冊 NT$ 3,000（15 張解析後可加購）</li>
-    </ul>
-    <p style="text-align:center;margin-top:12px;">
-        <a href="https://lin.ee/ySxUkJK" target="_blank"
-           style="display:inline-block;background:var(--cocoa);color:#fff;padding:12px 26px;border-radius:28px;
-           text-decoration:none;font-size:18px;box-shadow:0 4px 8px rgba(0,0,0,.25);transition:.3s;">
-            💬 私訊預約付費
-        </a>
-    </p>
+  <h2>💰 線上諮詢費用</h2>
+  <div class="price-grid">
+    <div>1 張｜$300</div><div>3 張｜$600</div>
+    <div>5 張｜$900</div><div>7 張｜$1,200</div>
+    <div>9 張｜$1,500</div><div>12 張｜$1,800</div>
+    <div>15 張｜$2,200</div><div>節奏手冊｜$3,000</div>
+  </div>
+  <p style="text-align:center;margin-top:14px;">
+    <a href="https://lin.ee/ySxUkJK" target="_blank"
+       style="display:inline-block;background:var(--cocoa);color:#fff;padding:12px 26px;border-radius:28px;
+       text-decoration:none;font-size:18px;box-shadow:0 4px 8px rgba(0,0,0,.25);">
+      💬 私訊預約付費
+    </a>
+  </p>
 </div>
 
-<a href="https://hourlight.github.io/" class="home-button">🏠 返回首頁</a>
+<a href="https://hourlight.github.io/" class="home-btn">🏠 返回首頁</a>
 
 <script>
 let selectedCards=[];
-
-function formatCardNumber(n){
-    return n<=22?'A'+(n-1).toString().padStart(2,'0'):(n-22).toString().padStart(3,'0');
-}
-
+function formatCardNumber(n){return n<=22?'A'+(n-1).toString().padStart(2,'0'):(n-22).toString().padStart(3,'0');}
 function drawCards(num){
     alert("請閉眼深呼吸，心裡默念問題，再點確認。");
     selectedCards=[];
     while(selectedCards.length<num){
-        let n=Math.floor(Math.random()*130)+1;
+        const n=Math.floor(Math.random()*130)+1;
         if(!selectedCards.includes(n))selectedCards.push(n);
     }
-    const html=selectedCards.map(c=>`
-        <div class="card-container">
-            <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${c}.jpg">
-            <div class="card-number">編號：${formatCardNumber(c)}</div>
-        </div>`).join('');
-    document.getElementById('result').innerHTML=html;
+    document.getElementById('result').innerHTML=selectedCards.map(c=>`
+      <div class="card-container">
+        <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${c}.jpg">
+        <div class="card-number">編號：${formatCardNumber(c)}</div>
+      </div>`).join('');
 }
-
 function copyResult(){
     if(!selectedCards.length){alert("請先抽牌再複製！");return;}
-    const text=selectedCards.map(formatCardNumber).join(', ');
-    navigator.clipboard.writeText(text).then(()=>{
-        alert('牌卡編號已複製：'+text);
-    }).catch(()=>{
-        alert('複製失敗，請手動複製：'+text);
-    });
+    const txt=selectedCards.map(formatCardNumber).join(', ');
+    navigator.clipboard.writeText(txt).then(()=>alert('已複製：'+txt))
+        .catch(()=>alert('複製失敗，請手動複製：'+txt));
 }
 </script>
-
 </body>
 </html>
