--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 </head>
 <body>
 
-<h1>馥靈之鑰 Hour Light｜靈性天使線上抽牌</h1>
+<h1 class="main-title">馥靈之鑰 Hour Light</h1>
+<h2 class="sub-title">靈性天使線上抽牌</h2>
 <p class="tagline">130 張牌卡 × 130 位靈性天使 — H-O-U-R 四步快速對焦</p>
 
 <!-- 折疊說明 -->
